--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^2.6.5",
     "element-ui": "^2.7.2",
     "normalize.css": "^8.0.1",
-    "vue": "^2.6.6"
+    "vue": "^2.6.6",
+    "vue-router": "^3.0.3"
   },
   "devDependencies": {
     "@babel/register": "^7.4.0",
