--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.7.2",
+    "js-cookie": "^2.2.0",
     "normalize.css": "^8.0.1",
+    "sha1": "^1.1.1",
     "vue": "^2.6.6",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@babel/register": "^7.4.0",
