--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "element-ui": "^2.7.2",
     "js-cookie": "^2.2.0",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "sha1": "^1.1.1",
     "vue": "^2.6.6",
+    "vue-i18n": "^8.10.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.1.0"
   },
