--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "^2.1.3",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "svg-sprite-loader": "^4.1.3",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.5.21"
